# belayer

./: .gitignore  CLAUDE.md  Makefile  README.md  agentassets.go  agentassets_test.go  embed.go  go.mod  go.sum  pyproject.toml  review-personas.toml  workspace
.claude-plugin/: marketplace.json
.codex/: INSTALL.md
agents/: README.md
agents/backend-dev/: agent.yaml  agents.md  system-prompt.md
agents/game-master/: agent.yaml  agents.md  system-prompt.md
agents/pm/: agent.yaml  agents.md  system-prompt.md
agents/qa/: agent.yaml  agents.md  system-prompt.md
agents/reviewer/: agent.yaml  agents.md  system-prompt.md
agents/supervisor/: agent.yaml  agents.md  system-prompt.md
agents/web-dev/: agent.yaml  agents.md  system-prompt.md
channel/: bun.lockb  channel.ts  package.json
channel/hooks/: notification-router.sh  session-start.sh  stop-insurance.sh
docker/: Dockerfile.agent  Dockerfile.proxy  belayer-entrypoint.sh  proxy-entrypoint.sh  tinyproxy.conf
docs/: AGENT_ARCHITECTURE.md  ARCHITECTURE.md  ARTIFACT_SCHEMAS.md  CRAG_FILESYSTEM.md  CRAG_MODE.md  DEPLOYMENT.md  DESIGN.md  LEARNINGS.md  LOG_FORMAT.md  OBSERVABILITY.md  ORG_FILESYSTEM.md  ORG_MODE.md  PHILOSOPHY.md  PIPELINE_REFERENCE.md  PLANS.md  PLUGINS.md  QUALITY.md  README.md  REVIEW_GUIDANCE.md  SANDBOXING.md  TODOS.md  TUI.md  dashboard-spec.md  hermes-proxmox-lxc-deployment.md  webui-spec.md
frameworks/: embed.go  install.go  install_test.go
hermes_bridge/: README.md  __main__.py  callbacks.py  http_client.py  stdin_reader.py  tools.py
web/: app.js  index.html  style.css
(+926 files in other folders)
